--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "A terminal-based narrative survival game inspired by Lifeline"
 license = "MIT"
 
 [dependencies]
-crossterm = "0.28"
+ratatui = "0.30"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 chrono = { version = "0.4", features = ["serde"] }
