--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ serde_json = "1"
 chrono = { version = "0.4", features = ["serde"] }
 dirs = "5"
 ctrlc = "3"
+
+[[bin]]
+name = "export-story"
+path = "src/bin/export_story.rs"
